# emakler-etfs

./: pyproject.toml
data/: etfs.json
extract_data/: __main__.py  workbook.ipynb
